cmake_minimum_required(VERSION 3.16)
project(tidp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(include)
include_directories(include/net)
include_directories(olap)

add_library(tidp
        include/net/TL_Execute.h
        include/net/TL_ExecuteFactory.h
        include/net/TL_ExecuteThread.h
        include/net/TL_ExecuteThreadFactory.h
        include/net/TL_Packet.h
        include/net/TL_PacketManger.h
        include/net/TL_Server.h
        include/net/TL_Session.h
        include/net/TL_SessionManger.h
        include/net/TL_Socket.h
        include/config.h
        include/TL_Cgi.h
        include/TL_Client.h
        include/TL_Command.h
        include/TL_Common.h
        include/TL_Crontab.h
        include/TL_Datetime.h
        include/TL_DG.h
        include/TL_DictMap.h
        include/TL_Elapsed.h
        include/TL_Exp.h
        include/TL_Factory.h
        include/TL_Functor.h
        include/TL_Http.h
        include/TL_HttpRequest.h
        include/TL_HttpResponse.h
        include/TL_IniFile.h
        include/TL_List.h
        include/TL_Lock.h
        include/TL_Logger.h
        include/TL_Loki.h
        include/TL_MD5.h
        include/TL_MemQueue.h
        include/TL_MemString.h
        include/TL_Mmap.h
        include/TL_Monitor.h
        include/TL_Mysql.h
        include/TL_MysqlPool.h
        include/TL_Option.h
        include/TL_Pool.h
        include/TL_Redis.h
        include/TL_RelationMgr.h
        include/TL_Rlog.h
        include/TL_Singleton.h
        include/TL_StringBuffer.h
        include/TL_Thread.h
        include/TL_ThreadCache.h
        include/TL_ThreadLock.h
        include/TL_ThreadMap.h
        include/TL_ThreadQueue.h
        include/TL_TimerProvide.h
        include/TL_TSD.h
        include/TL_Type.h
        include/TL_TypeList.h
        include/TL_TypeTraits.h
        olap/TL_Cube.cpp
        olap/TL_Cube.h
        olap/TL_Dimension.cpp
        olap/TL_Dimension.h
        olap/TL_KeyLiner.cpp
        olap/TL_KeyLiner.h
        olap/TL_Metric.cpp
        olap/TL_Metric.h
        olap/TL_MultiDimension.cpp
        olap/TL_MultiDimension.h
        src/net/TL_Execute.cpp
        src/net/TL_ExecuteFactory.cpp
        src/net/TL_ExecuteThread.cpp
        src/net/TL_ExecuteThreadFactory.cpp
        src/net/TL_Packet.cpp
        src/net/TL_PacketManger.cpp
        src/net/TL_Server.cpp
        src/net/TL_Session.cpp
        src/net/TL_SessionManger.cpp
        src/net/TL_Socket.cpp
        src/TL_Cgi.cpp
        src/TL_Client.cpp
        src/TL_Command.cpp
        src/TL_Common.cpp
        src/TL_Crontab.cpp
        src/TL_Datetime.cpp
        src/TL_Elapsed.cpp
        src/TL_Exp.cpp
        src/TL_Http.cpp
        src/TL_HttpRequest.cpp
        src/TL_HttpResponse.cpp
        src/TL_IniFile.cpp
        src/TL_Logger.cpp
        src/TL_MD5.cpp
        src/TL_MemQueue.cpp
        src/TL_MemString.cpp
        src/TL_Mmap.cpp
        src/TL_Mysql.cpp
        src/TL_MysqlPool.cpp
        src/TL_Option.cpp
        src/TL_Redis.cpp
        src/TL_Rlog.cpp
        src/TL_StringBuffer.cpp
        src/TL_Thread.cpp
        src/TL_ThreadLock.cpp
        src/TL_TimerProvide.cpp
        TL_MultiLiner.h)
add_link_options(tidp pthread)